fixed header spacing

--- a/media/styles_blocking/theme.scss
+++ b/media/styles_blocking/theme.scss
@@ -10,7 +10,7 @@
   flex-direction: row-reverse;
   color: #d1d5da;
   background: rgb(0, 0, 0);
-  background: linear-gradient(21deg, rgba(0, 0, 0, 1) 0%, rgba(34, 34, 34, 1) 35%, rgba(17, 17, 17, 1) 100%);
+  background: linear-gradient(15deg, rgba(0, 0, 0, 1) 0%, rgba(34, 34, 34, 1) 35%, rgba(17, 17, 17, 1) 100%);
 
   .header__branding {
     font-size: 0;
@@ -18,7 +18,7 @@
     min-width: 20em;
     flex-grow: 10;
     order: 2;
-    padding: $grid*1.5 $grid/2;
+    padding: $grid*2 $grid
   }
 
   .header__branding__machine,
@@ -78,7 +78,7 @@
     justify-content: flex-end;
     flex-grow: 1;
     order: 1;
-    padding: $grid/2;
+    padding: $grid/2 $grid;
 
     &:hover,
     &:focus,
